# CI-Test-2

./: CMakeLists.txt
.github/workflows/: cmake_ctest.yml
